Atualiza a BASE do código!

--- a/_SITE COFRUTA/index.html
+++ b/_SITE COFRUTA/index.html
@@ -38,7 +38,7 @@
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">COFRUTA</a></h1>
+        <h1><a href="#intro" class="scrollto">COFRUTA DO BRASIL</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>-->
       </div>
@@ -49,7 +49,7 @@
           <li><a href="#historico">Histórico</a></li>
           <li><a href="#produtos">Produtos</a></li>
           <li><a href="#portfolio">Galeria</a></li>
-          <li><a href="#clientes">Clientes/Parceiros</a></li>
+          <li><a href="#clientes">Parcerias</a></li>
           <!-- <li><a href="#team">Team</a></li>
           <li class="menu-has-children"><a href="">Drop Down</a>
             <ul>
@@ -80,48 +80,49 @@
             <div class="carousel-background"><img src="img/intro-carousel/IMG_6298.JPG" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>TEXTO 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h2>100% ECOLOGICO</h2>
+                <p>Os produtos oferecidos são 100% oriundos da agricultura familiar, provenientes diretamente da natureza sob o critério da preservação do meio ambiente.</p>
                 <a href="#featured-produtos" class="btn-get-started scrollto">Conheça Mais</a>
               </div>
             </div>
           </div>
 
           <div class="carousel-item">
-            <div class="carousel-background"><img src="./img/intro-carousel/IMG_6289.JPG" alt=""></div>
+            <div class="carousel-background"><img src="./img/intro-carousel/IMG_6310.JPG" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>TEXTO 2</h2>
-                <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut.</p>
+                <h2>EQUIPAMENTOS</h2>
+                <p>A COFRUTA conta com ótimos equipamentos de processamento, visando extrair e oferecer ao cliente o melhor de cada produto da nossa terra.</p>
                 <a href="#featured-produtos" class="btn-get-started scrollto">Conheça Mais</a>
               </div>
             </div>
           </div>
 
           <div class="carousel-item">
-            <div class="carousel-background"><img src="img/intro-carousel/3.jpg" alt=""></div>
+            <div class="carousel-background"><img src="img/intro-carousel/IMG_6341.JPG" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>TEXTO 3</h2>
-                <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt omnis iste natus error sit voluptatem accusantium.</p>
+                <h2>PARCERIAS</h2>
+                <p>Contamos com grandes parcerias comerciais como a NATURA e formativas como o IFPA-Campus Castanhal, e tantos outros, que contribuem com a capacitação e conscientização de cada cooperado.</p>
                 <a href="#featured-produtos" class="btn-get-started scrollto">Conheça Mais</a>
               </div>
             </div>
           </div>
 
           <div class="carousel-item">
-            <div class="carousel-background"><img src="img/intro-carousel/4.jpg" alt=""></div>
+            <div class="carousel-background"><img src="img/intro-carousel/IMG_6333.JPG" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>TEXTO 4</h2>
-                <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum.</p>
+                <h2>FABRICA</h2>
+                <p>Atualmente contamos com duas fábricas, uam processa 
+polpa e a outra extrai óleo.</p>
                 <a href="#featured-produtos" class="btn-get-started scrollto">Conheça Mais</a>
               </div>
             </div>
           </div>
 
           <div class="carousel-item">
-            <div class="carousel-background"><img src="img/intro-carousel/5.jpg" alt=""></div>
+            <div class="carousel-background"><img src="img/intro-carousel/IMG_6293.JPG" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>TEXTO 5</h2>
@@ -170,7 +171,7 @@
 
         <p>Esse impasse gerou a necessidade de constituir uma cooperativa como modelo ideal de organização, pois além de atender os interesses comerciais citados, ainda preservaria o trabalho coletivo e harmônico, assim como alguns valores já desenvolvidos entre eles, como ajuda mútua, união, democracia, igualdade, partilha, respeito à natureza dentre outros, tornando-se assim, a cooperativa, uma solução para a maioria dos agricultores familiares associados na ADEMPA.</p>
 
-        <p>Associado a esse contexto, e ainda ao fato de que na década de 90 inicia-se o debate do processamento de frutas naquela região, em 2002, a ADEMPA com Cooperativa dos Fruticultores de Abaetetuba Fundada em 03/03/2002 apoio do STR de Abaetetuba, estimulou a criação da Cooperativa dos fruticultores de Abaetetuba (COFRUTA) para que ela pudesse atuar nesse segmento de beneficiamento da produção, industrialização e comercialização dos frutos (SILVA, 2010).</p>
+        <p>Associado a esse contexto, e ainda ao fato de que na década de 90 inicia-se o debate do processamento de frutas naquela região, em 2002, a ADEMPA estimulou a criação da Cooperativa dos Frulticutores de Abaetetuba (COFRUTA) fundada em 03/03/2002 com o apoio do STR de Abaetetuba, para que ela pudesse atuar nesse segmento de beneficiamento da produção, industrialização e comercialização dos frutos (SILVA, 2010).</p>
 
         <p>Fundada em 02 de março de 2002, pautada nos princípios do cooperativismo, para desenvolver ações que visassem elevar os
         potenciais produtivos, organizacional e comercial dos produtos oriundos da agricultura familiar e economia solidária, a COFRUTA,passou a promover a geração de trabalho e renda para o município de Abaetetuba.</p>
@@ -182,7 +183,7 @@
         agricultores (as) de base econômica familiar a ela cooperada com finalidade de desenvolver ações para elevar o potencial produtivo, organizacional e comercial tendo como objetivo os seguintes pontos:</p>
 
         <ol>
-          <li>Incentivar e coordenar a produção a familiar rural, nas áreas pertencentes aos cooperados;</li>
+          <li>Incentivar e coordenar a produção familiar rural, nas áreas pertencentes aos cooperados;</li>
           
           <li>Viabilizar o acesso e comercializar os bens de consumo frutos e derivados necessários às famílias dos cooperados bem como, no limite de interesses da cooperativa e da lei, os não sócios;</li>
 
@@ -199,7 +200,7 @@
 
           <li>Prestar assistência social de acordo com os limites do fundo de reserva para este fim;</li> 
 
-          <li>Promover encontros e cursos buscando uma melhor qualificação dos agricultores familiares, propiciando uma melhor compreensão do movimento cooperativista e a introdução de novos padrõestecnológicos e de gestão visando assim à melhoria de seu potencial produtivo;</li> 
+          <li>Promover encontros e cursos buscando uma melhor qualificação dos agricultores familiares, propiciando uma melhor compreensão do movimento cooperativista e a introdução de novos padrões tecnológicos e de gestão visando assim a melhoria de seu potencial produtivo;</li> 
 
           <li>Promover o intercâmbio entre outras organizações ou experiências profissionais de interesse dos cooperados;</li>
 
@@ -465,12 +466,12 @@
       <div class="container">
 
         <header class="section-header">
-          <h3>Nossos Clientes/Parceiros</h3>
+          <h3>Nossas Parcerias</h3>
         </header>
 
         <div class="owl-carousel clientes-carousel">
           <img src="./img/clientes/client-1.png" alt="">
-          <img src="./img/clientes/client-2.png" alt="">
+          <img src="img/clientes/client-2.png" alt="">
           <img src="./img/clientes/client-3.png" alt="">
           <img src="./img/clientes/client-4.png" alt="">
           <img src="./img/clientes/client-5.png" alt="">
